k8s/workloads/addons/ray-prometheus-analytics/grafana-image-renderer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana-image-renderer
  name: grafana-image-renderer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-image-renderer
  template:
    metadata:
      labels:
        app: grafana-image-renderer
    spec:
      containers:
        - name: grafana-image-renderer
          image: asksven/grafana-image-renderer:1
          ports:
            - name: http
              containerPort: 8081
