k8s/workloads/addons/ray-prometheus-analytics/grafana-image-render-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer-svc
  labels:
    app: grafana-image-renderer-svc
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: grafana-image-renderer
  type: ClusterIP
